Link button and spacing fixes to ButtonBar

--- a/packages/ui-library/src/css/buttons.scss
+++ b/packages/ui-library/src/css/buttons.scss
@@ -352,6 +352,18 @@ button,
             margin: 0 0 6px;
         }
     }
+    &.link {
+        height: auto;
+        line-height: inherit;
+        padding: 0;
+        color: $color-active-blue;
+        border: none;
+
+        &:hover {
+            color: $color-active-blue-highlighted;
+            text-decoration: underline;
+        }
+    }
 }
 
 .button {
