--- a/packages/ui-library/src/css/layout.scss
+++ b/packages/ui-library/src/css/layout.scss
@@ -987,8 +987,10 @@ $color-grey-minor-1: $color-neutral-30;
     }
 
     &__cancel-link {
-        line-height: 36px;
-        margin-right: $spacing-sm;
+        &.button {
+            line-height: 36px;
+        }
+        margin: 0 $spacing-lg 0 $spacing-md;
     }
 }
 
